--- a/animation-lecture.html
+++ b/animation-lecture.html
@@ -7,6 +7,20 @@
         integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
         crossorigin="anonymous"></script>
 
+        <script>
+            $(document).ready(function(){
+                $('#show').click(function(){
+                    $('#theDiv').show();
+                })
+            })
+
+            $(document).ready(function(){
+                $('#hide').click(function(){
+                    $('#theDiv').hide();
+                })
+            })
+        </script>
+
     <style type="text/css">
         #theDiv {
             position: relative;
